--- a/gtk/1channel.ui
+++ b/gtk/1channel.ui
@@ -1,23 +1,6 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkListStore" id="l_shows">
-    <columns>
-      <!-- column-name tv_name -->
-      <column type="gchararray"/>
-      <!-- column-name tv_id -->
-      <column type="gulong"/>
-    </columns>
-  </object>
-  <object class="GtkListStore" id="l_seasons">
-    <columns>
-      <!-- column-name s_name -->
-      <column type="gchararray"/>
-      <!-- column-name s_id -->
-      <column type="gint"/>
-    </columns>
-  </object>
+  <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkListStore" id="l_episodes">
     <columns>
       <!-- column-name e_name -->
@@ -42,31 +25,55 @@
       <column type="gint"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="l_seasons">
+    <columns>
+      <!-- column-name s_name -->
+      <column type="gchararray"/>
+      <!-- column-name s_id -->
+      <column type="gint"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="l_shows">
+    <columns>
+      <!-- column-name tv_name -->
+      <column type="gchararray"/>
+      <!-- column-name tv_id -->
+      <column type="gulong"/>
+    </columns>
+  </object>
   <object class="GtkWindow" id="window">
+    <property name="can_focus">False</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <child>
       <object class="GtkTable" id="table1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="n_columns">3</property>
         <child>
           <object class="GtkHBox" id="hbox1">
             <property name="width_request">300</property>
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkTable" id="table2">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="n_rows">2</property>
                 <child>
                   <object class="GtkTreeView" id="treeview1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="model">l_shows</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="treeview-selection1"/>
+                    </child>
                   </object>
                 </child>
                 <child>
                   <object class="GtkTable" id="table5">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="n_rows">2</property>
                     <property name="n_columns">3</property>
                     <child>
@@ -89,7 +96,7 @@
                       <object class="GtkEntry" id="t_search">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="invisible_char">●</property>
                       </object>
                       <packing>
                         <property name="right_attach">3</property>
@@ -135,6 +142,8 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -142,10 +151,11 @@
               <object class="GtkVSeparator" id="vseparator1">
                 <property name="width_request">6</property>
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -157,10 +167,12 @@
         <child>
           <object class="GtkHBox" id="hbox2">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkTable" id="table3">
                 <property name="width_request">100</property>
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow2">
                     <property name="visible">True</property>
@@ -172,6 +184,9 @@
                         <property name="can_focus">True</property>
                         <property name="model">l_seasons</property>
                         <property name="search_column">0</property>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection" id="treeview-selection2"/>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -179,49 +194,57 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
             <child>
               <object class="GtkVSeparator" id="vseparator2">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkTable" id="table8">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">automatic</property>
                     <child>
                       <object class="GtkTreeView" id="treeview3">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">l_episodes</property>
                         <property name="search_column">0</property>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection" id="treeview-selection3"/>
+                        </child>
                       </object>
                     </child>
                   </object>
                 </child>
               </object>
               <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
                 <property name="position">2</property>
               </packing>
             </child>
             <child>
               <object class="GtkVSeparator" id="vseparator4">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">3</property>
               </packing>
             </child>
@@ -234,21 +257,33 @@
         <child>
           <object class="GtkHBox" id="hbox3">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkTable" id="table6">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="n_rows">2</property>
                 <child>
                   <object class="GtkTreeView" id="treeview4">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="model">l_links</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection" id="treeview-selection4"/>
+                    </child>
                   </object>
                 </child>
                 <child>
                   <object class="GtkTable" id="table7">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="n_columns">3</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                     <child>
                       <object class="GtkButton" id="button5">
                         <property name="label" translatable="yes">Add Show</property>
@@ -261,12 +296,6 @@
                         <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
                   </object>
                   <packing>
                     <property name="top_attach">1</property>
@@ -276,6 +305,8 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -283,10 +314,11 @@
               <object class="GtkVSeparator" id="vseparator3">
                 <property name="width_request">6</property>
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -300,23 +332,26 @@
     </child>
   </object>
   <object class="GtkWindow" id="window1">
+    <property name="can_focus">False</property>
     <property name="default_width">400</property>
     <property name="default_height">300</property>
     <child>
       <object class="GtkTable" id="table4">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="n_rows">2</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow3">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <child>
               <object class="GtkTreeView" id="treeview5">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="model">l_options</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection5"/>
+                </child>
               </object>
             </child>
           </object>
@@ -324,6 +359,7 @@
         <child>
           <object class="GtkHBox" id="hbox4">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkButton" id="option_add">
                 <property name="label" translatable="yes">Add</property>
@@ -332,6 +368,8 @@
                 <property name="receives_default">True</property>
               </object>
               <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
